force-app/main/default/objects/ssot__OutcomeIntent__dlm/fields/ssot__IntendedDirection__c.field-meta.xml
<CustomField>
    <fullName>ssot__IntendedDirection__c</fullName>
    <label>Intended Direction</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IntendedDirection</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>