force-app/main/default/objects/ssot__OutcomeIntent__dlm/fields/ssot__OutcomeStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__OutcomeStatus__c</fullName>
    <label>Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OutcomeStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>