force-app/main/default/objects/ssot__OutcomeIntent__dlm/fields/ssot__SourceName__c.field-meta.xml
<CustomField>
    <fullName>ssot__SourceName__c</fullName>
    <label>Source Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SourceName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>